--- a/src/App.css
+++ b/src/App.css
@@ -240,4 +240,47 @@ animation: width 0.5s linear forwards;
 }
 
 }
+.doctor {
+  position: relative; /* Make this the positioning context */
+  z-index: 2; /* Higher z-index to place above the ::before */
+  height: 400px;
+  width: 280px;
+  display: flex;
+  align-items: flex-end; /* Use flex-end instead of end */
+}
+.doctor-inner{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: end;
+  background: var(--blue-light);
+  position: relative;
+  z-index: 3;
+}
+.doctor-inner img {
+  width: 100%;
+  height: 90%;
+  object-fit: contain;
+}
+
+.doctor::before {
+  content: "";
+  position: absolute; /* Position it absolutely within the .doctor */
+  width: 280px;
+  height: 280px;
+  top: -12px; /* Adjust positioning if necessary */
+  background: var(--pink);
+  right: -12px;
+  z-index: 0; /* Lower z-index to place behind .doctor */
+}
+.doctor::after {
+  content: "";
+  position: absolute; /* Position it absolutely within the .doctor */
+  width: 280px;
+  height: 280px;
+  bottom: -12px; /* Adjust positioning if necessary */
+  background: var(--neon);
+  left: -12px;
+  z-index: 0; /* Lower z-index to place behind .doctor */
+}
 
