--- a/src/App.css
+++ b/src/App.css
@@ -4,42 +4,17 @@ body{
   padding: 0;
   background: #fff !important;
   width: 100%;
-}
-.banner{
-  min-height: 60vh;
-  display: flex;
-  align-items: center;
-  justify-content: start;
   position: relative;
-  background: url(./components/images/banner.webp);
-  background-repeat: no-repeat;
- background-size: 100%;
-  background-attachment: fixed;
-  
 }
+
 .banner img{
-  width: 100%;
   height: 100%;
-  object-fit: cover;
-}
-.banner::after{
-  background: linear-gradient(87deg, #2d3b6d, #232f61a6, transparent, transparent);
-  content: "";
-  position: absolute;
   width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+  object-fit: cover; 
 }
-.banner::before{
-background: linear-gradient(180deg, #000, transparent, transparent);
-content: "";
-position: absolute;
-width: 100%;
-height: 100%;
-left: 0;
-top: 0;
-}
+
+
+
 
 /* services  */
 
@@ -282,5 +257,243 @@ animation: width 0.5s linear forwards;
   background: var(--neon);
   left: -12px;
   z-index: 0; /* Lower z-index to place behind .doctor */
+}
+
+.promotion{
+  border: 1px solid #ccc;
+  height: 300px;
+  min-height: 300px;
+  padding: 1rem;
+  max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: start;
+  width: 100%;
+}
+
+
+.bluepromotion{
+  background: linear-gradient(180deg, #3f6999, #669cda, #92c0ec, #a7d0ee);
+}
+.neonpromotion{
+  background: linear-gradient(180deg, #409089, #57bfb6, #91e1da, #b3e8e4);
+}
+
+.pinkpromotion{
+  background: linear-gradient(180deg, #b5589f, #da5cbc, #d78ac5, #eda4dc);
+}
+
+
+.float{
+  position: fixed;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  padding: 10px;
+  z-index: 1000;
+  background: #fff;
+  bottom: 40px;
+  border: 1px solid #e4e3e3;
+  right:50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 50%;
+
+}
+.float img{
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  
+}
+
+
+.masonry   img {
+  border: 1px solid #ccc;
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+.masonry   video {
+  border: 1px solid #ccc;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+}
+.overlaygll {
+
+  background: #00000067;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100% !important;
+  height: 100% !important;
+  z-index: 23 !important;
+}
+
+
+.play-btn {
+  width: 50px !important;
+  height: 50px !important;
+  background: radial-gradient(rgb(139 74 126) 60%, rgba(255, 255, 255, 1) 62%);
+  border-radius: 50%;
+  position: relative !important;
+  display: block;
+  margin: 100px auto !important;
+  box-shadow: 0px 0px 25px 3px rgb(156 63 135);
+  
+}
+.play-btn:before {
+  content: "";
+  position: absolute;
+  width: 150%;
+  height: 150%;
+  -webkit-animation-delay: 0s;
+  animation-delay: 0s;
+  -webkit-animation: pulsate1 2s;
+  animation: pulsate1 2s;
+  -webkit-animation-direction: forwards;
+  animation-direction: forwards;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-timing-function: steps;
+  animation-timing-function: steps;
+  opacity: 1;
+  border-radius: 50%;
+  border: 5px solid rgba(255, 255, 255, .75);
+  top: -30%;
+  left: -30%;
+  background: rgba(198, 16, 0, 0);
+}
+.play-btn::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-40%) translateY(-50%);
+  transform: translateX(-40%) translateY(-50%);
+  transform-origin: center center;
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-left: 16px solid #fff;
+  z-index: 100;
+  -webkit-transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+  transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+@keyframes pulsate1 {
+  
+  0% {
+    -webkit-transform: scale(0.6);
+    transform: scale(0.6);
+    opacity: 1;
+    box-shadow: inset 0px 0px 25px 3px rgba(255, 255, 255, 0.75), 0px 0px 25px 10px rgba(255, 255, 255, 0.75);
+  }
+  100% {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1);
+    opacity: 0;
+    box-shadow: none;
+  }
+}
+
+
+div.testimonial
+{
+  height: fit-content;
+  min-height: 130px;
+  max-height: fit-content;
+  position: relative;
+  background: #f3f3f3;
+  border: 1px solid #ccc;
+  padding-top: 70px;
+  padding: 60px 1rem 1rem;
+}
+.outer-tag {
+  position: absolute;
+  top: -15px;
+
+}
+.inner-tag{
+  position: relative;
+  padding: 10px;
+  background: var(--pink);
+  height: 50px;
+  width: 50px;
+}
+
+  .inner-tag::before {
+    border-right: 17px solid #480c3a;
+    position: absolute;
+    content: "";
+    border-bottom: 1px solid #490c3a;
+    left: 1px;
+    border-top: 14px solid #00000000;
+    top: 0px;
+    left: -16px;
+}
+
+
+.about{
+  min-height: 50vh;
+}
+
+.about-img{
+  min-height: 300px;
+  height: 400px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.about-img img{
+  width: 100%;
+  height: 100%;
+ object-fit: contain;
+ filter: drop-shadow(-30px -3px 6px #dedddc);
+}
+.about-img::after{
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(0deg, #f5f5f5, #f5f5f547, transparent);
+
+}
+
+.team-card{
+border-radius: 10px;
+    border: 1px solid #e0dede;
+    background: linear-gradient(184deg, #efefef, #4041745c, #4041745c, #00000030);
+    height: 340px;
+    min-height: 340px;
+
+}
+
+.team-img{
+  height: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  width: 100%;
+  min-height: 340px;
+}
+.team-img img{
+  height: 300px;
+ object-fit: contain;
+  width: 100%;
+
+}
+
+ .doc-name {
+  width: 120% !important;
 }
 
