--- a/src/App.css
+++ b/src/App.css
@@ -406,9 +406,8 @@ animation: width 0.5s linear forwards;
 
 div.testimonial
 {
-  height: fit-content;
-  min-height: 130px;
-  max-height: fit-content;
+  height:100%;
+  max-height: 300px !important;
   position: relative;
   background: #f3f3f3;
   border: 1px solid #ccc;
