--- a/src/components/css/common.css
+++ b/src/components/css/common.css
@@ -16,7 +16,12 @@
   }
   
 
-  
+  a{
+    text-decoration: none;
+    color: initial;
+  }
+
+
   .p-black-small {
     font-size: 11px;
     color: var(--black);
@@ -254,16 +259,16 @@
     cursor: pointer;
     border-radius: 10px;
     text-transform: capitalize;
-    
+
     font-size: 12px;
     border: 3px solid var(--pink);
     padding: 2px 10px;
     padding: 2px 14px;
     transition: all 0.5s;
   }
-  .btn-blue:hover{
+  .btn-pink:hover{
     background: transparent;
-    color:var(--white);
+    color:var(--pink) !important;
     border-radius: 10px;
     padding: 2px 14px;
   }
