--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body{
   background: #fff !important;
   width: 100%;
   position: relative;
+
 }
 
 .banner img{
@@ -775,3 +776,160 @@ border-radius: 10px;
 .d-d a:hover{
  color: #fff !important;
 }
+
+
+
+
+/* skin sections */
+
+.skin-facility-img{
+  height: 400px;
+  width: 100%;
+  position: relative;
+
+}
+
+
+.skin-facility-img img{
+  height: 100%;
+  object-fit: cover;
+  width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  
+}
+
+.skname{
+  position: absolute;
+  bottom: 0;
+  left: -20px;
+  
+}
+
+.skname {
+  position: absolute;
+  bottom: 3px;
+  left: -14px;
+}
+.skinner-tag{
+  position: relative;
+  padding: 10px;
+  background: var(--pink);
+  height: fit-content;
+  width: fit-content;
+}
+
+.skinner-tag::before {
+  border-right: 16px solid #480c3a;
+  position: absolute;
+  content: "";
+  border-left: -6px solid #490c3a;
+  left: 1px;
+  border-top: 12px solid #00000000;
+  top: -12px;
+  left: -1px;
+}
+
+
+.sfacility{
+  position: absolute;
+  height: fit-content;
+  border: 2px solid var(--pink);
+  width: fit-content;
+  border-radius: 10px;
+  background: #f5f5f5d7;
+  backdrop-filter: blur(3px);
+  padding: 1rem;
+}
+.sktreat{
+  left: -80px;
+  top: 20%;
+  width: 40%;
+}
+.skcure{
+  right: -80px;
+  bottom: 20%;
+  width: 40%;
+}
+
+
+.decob{
+  position: relative;
+}
+
+.decob::before{
+  position: absolute;
+  content: "";
+  width:20px;
+top: 90%;  height: 20px;
+left: 3%;
+background: var(--pink);
+transform: rotate(45deg);
+}
+
+.decob::after{
+  position: absolute;
+  content: "";
+  width:20px;
+bottom: 90%;  height: 20px;
+right: 3%;
+background: var(--pink);
+transform: rotate(55deg);
+}
+
+
+.deco{
+  position: relative;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  
+}
+
+.deco:nth-child(even){
+  background: #f0f0f0;
+  
+}
+.deco:nth-child(odd){
+  background: #ffeded;
+}
+
+.deco::before{
+  position: absolute;
+  content: "";
+  width:20px;
+top: 90%;  height: 20px;
+left: 3%;
+background: var(--pink);
+transform: rotate(45deg);
+}
+
+.deco::after{
+  position: absolute;
+  content: "";
+  width:20px;
+bottom: 90%;  height: 20px;
+right: 3%;
+background: var(--pink);
+transform: rotate(55deg);
+}
+
+.gallery-cap{
+  position: relative;
+}
+
+.gallery-capi{
+  position: absolute;
+  background: #0000003b;
+  display: none;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  transition:  all 0.6s;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.gallery-cap:hover .gallery-capi{
+display: flex;
+}
+
