--- a/src/components/css/responsive.css
+++ b/src/components/css/responsive.css
@@ -240,8 +240,24 @@
       
     }
     .team-img img {
-      height: auto !important;
+      height: 324px !important;
       object-fit: contain;
       width: 100%;
   }
+  .sub-dropdown-menu {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    height: fit-content;
+    left: 0;
+    padding-left: 1.5rem !important;
+    list-style-type: none;
+    padding: 0;
+    position: relative;
+    top: 0;
+    width: 100% !important;
+    
+    z-index: 999;
+}
+
    }
