--- a/src/App.css
+++ b/src/App.css
@@ -279,6 +279,14 @@ animation: width 0.5s linear forwards;
   align-items: start;
   justify-content: start;
   width: 100%;
+  position: relative;
+}
+.promotion .btn-close{
+  position: absolute;
+  top: 10px; right: 10px;
+  width: 10px;
+  height: 10px;
+
 }
 
 
@@ -514,7 +522,7 @@ border-radius: 10px;
   min-height: 340px;
 }
 .team-img img{
-  height: 300px;
+  height: fit-content;
  object-fit: contain;
   width: 100%;
 
@@ -866,7 +874,7 @@ border-radius: 10px;
   position: absolute;
   content: "";
   width:20px;
-top: 90%;  height: 20px;
+top: 98%;  height: 20px;
 left: 3%;
 background: var(--pink);
 transform: rotate(45deg);
@@ -920,7 +928,6 @@ transform: rotate(55deg);
 
 .gallery-cap{
   position: relative !important;
-  height: 100%;
 }
 
 .gallery-capi{
