--- a/src/App.css
+++ b/src/App.css
@@ -763,7 +763,7 @@ border-radius: 10px;
 
 }
 .dd-title {
-  background: var(--pink);
+  background: var(--pink-light);
   border-top-left-radius: 6px;
   display: inline-block;
   position: absolute;
@@ -934,13 +934,14 @@ transform: rotate(55deg);
 
 .gallery-capi{
   position: absolute;
-  background: #0000005b;
+  background: #000000a6;
   display: none;
   width: 100%;
   justify-content: center;
   align-items: center;
   transition:  all 0.6s;
   height: 100%;
+  z-index: 77;
   top: 0;
   left: 0;
 }
@@ -1030,6 +1031,20 @@ display: flex;
 
 }
 
+.dropdown-item{
+  position: relative;
+}
+.sub-dropdown-menu .dropdown-item  a svg{
+  color: var(--pink) ;
+}
+.sub-dropdown-menu .dropdown-item  a:hover{
+  color: var(--white) ;
+}
+.sub-dropdown-menu .dropdown-item a:hover svg{
+  color: var(--white) !important;
+
+}
+
 .sub-dropdown-menu {
   background-color: white;
   position: absolute;
@@ -1038,8 +1053,8 @@ display: flex;
   width: 20rem;
   list-style-type: none;
   border-radius: 10px;
-  border: 1px solid #ccc;
+
   z-index: 999;
-  height: 100%;
+  height: fit-content;
   padding: 0;
 }
