--- a/src/App.css
+++ b/src/App.css
@@ -858,12 +858,12 @@ border-radius: 10px;
 .sktreat {
   left:-30%;
   top: 20%;
-  width: 40%;
+ max-width: 50%;
 }
 .skcure {
   right: -30%;
-  bottom: 20%;
-  width: 40%;
+  bottom: 0%;
+ max-width: 60%;
 }
 
 
