--- a/src/components/css/responsive.css
+++ b/src/components/css/responsive.css
@@ -212,13 +212,13 @@
       position:  relative !important;
       left: 0 !important;
       top: 0 !important;
-      width: 100% !important;
+      max-width: 100% !important;
     }
     .skcure{
       position:  relative !important;
       right: 0px !important;
       bottom: 0 !important;
-      width: 100%  !important;
+      max-width: 100%  !important;
     }
     .skin-facility-img{
       height: auto !important;
@@ -249,14 +249,26 @@
     border-radius: 10px;
     height: fit-content;
     left: 0;
-    padding-left: 1.5rem !important;
+    padding-left: 6px !important;
     list-style-type: none;
     padding: 0;
     position: relative;
+    border: none !important;
     top: 0;
     width: 100% !important;
     
     z-index: 999;
+}
+
+.p-white-bold.nav-link{
+  font-size: 16px !important;
+  margin-bottom: 6px !important;
+}
+
+
+  
+.cwt2 img {
+object-fit: contain !important;
 }
 
    }
