--- a/src/App.css
+++ b/src/App.css
@@ -161,7 +161,7 @@ height: fit-content;
 
 footer{
  
-  background:  #1e1e1e;
+  background:  #000;
   background-blend-mode: multiply;
   background-size: cover;
   background-position: top;
@@ -281,6 +281,9 @@ animation: width 0.5s linear forwards;
   justify-content: start;
   width: 100%;
   position: relative;
+
+  height: 100%;
+  background-color: #000;
 }
 .promotion .btn-close{
   position: absolute;
@@ -290,18 +293,34 @@ animation: width 0.5s linear forwards;
 
 }
 
-
+.overlay_black{
+  position: absolute;
+  top: 0;
+  bottom:0;
+  left:0;
+  right:0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
 .bluepromotion{
-  /* background: linear-gradient(180deg, #3f6999, #669cda, #92c0ec, #a7d0ee); */
-  background: linear-gradient(180deg, #3f6999, #398eef, #48a0f4, #48a0f4)
+  background: linear-gradient(180deg, #7aad36, #3f660c);
+  background-image: url("../public/bg2.jpg");
   
 }
 .neonpromotion{
-  background: linear-gradient(180deg, #409089, #57bfb6, #91e1da, #b3e8e4);
+  background: linear-gradient(180deg, #f7941d, #f07f1a);
+  background-image: url("../public/bg2.jpg");
 }
 
 .pinkpromotion{
-  background: linear-gradient(180deg, #b5589f, #da5cbc, #d78ac5, #eda4dc);
+  background: linear-gradient(180deg, #5d459d, #4c3589);
+  background-image: url("../public/bg3.jpg");
+ 
+  /* background: linear-gradient(180deg, #b5589f, #da5cbc, #d78ac5, #eda4dc); */
+}
+.pinkpromotion .dateText{
+  color: #fff !important;
 }
 
 
@@ -689,7 +708,7 @@ border-radius: 10px;
 
 }
 .cwt{
-  border: 1px solid var(--grey);
+  /* border: 1px solid var(--grey); */
   border-radius: 20px;
   display: flex;
   align-items: start;
@@ -700,14 +719,14 @@ border-radius: 10px;
 
 
 .cwt img{
-  border: 1px solid var(--grey);
+  /* border: 1px solid var(--grey); */
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100%;
   width: 100%;
   object-fit: cover;
-  border-radius: 20px;
+  /* border-radius: 20px; */
 
 }
 
