Menu Design, Remove tags from search

--- a/src/components/css/responsive.css
+++ b/src/components/css/responsive.css
@@ -242,7 +242,7 @@
       
     }
     .team-img img {
-      height: 324px !important;
+      /* height: 324px !important; */
       object-fit: contain;
       width: 100%;
   }
