--- a/src/App.css
+++ b/src/App.css
@@ -539,7 +539,7 @@ border-radius: 10px;
   align-items: end;
   justify-content: center;
   width: 100%;
-  min-height: 340px;
+  /*min-height: 340px; */
 }
 .team-img img{
   height: fit-content;
@@ -1092,13 +1092,13 @@ display: flex;
 .sub-dropdown-menu {
   background-color: white;
   position: absolute;
-  border: none !important;
+  border: 1px lightgrey !important;
   top: 0;
   left: 100%;
   width: 20rem;
   list-style-type: none;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   z-index: 999;
   height: fit-content;
   padding: 0;
