--- a/src/components/css/common.css
+++ b/src/components/css/common.css
@@ -98,7 +98,7 @@ a {
 
 .p-heading-black {
   font-size: 16px !important;
-  line-height: 2rem;
+  /* line-height: 2rem; */
   text-transform: capitalize;
   color: var(--black);
   letter-spacing: 1px;
@@ -393,6 +393,32 @@ section {
   -webkit-line-clamp: 4 !important;
 }
 
+.overflow-5 {
+  display: -webkit-box !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  -webkit-box-orient: vertical !important;
+  -webkit-line-clamp: 5 !important;
+}
+
+.overflow-6 {
+  display: -webkit-box !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  -webkit-box-orient: vertical !important;
+  -webkit-line-clamp: 6 !important;
+}
+
+.overflow-7 {
+  display: -webkit-box !important;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  -webkit-box-orient: vertical !important;
+  -webkit-line-clamp: 7 !important;
+}
 .space {
   padding: 2rem 0;
 }
